--- a/client/src/css/bottomnav.css
+++ b/client/src/css/bottomnav.css
@@ -38,7 +38,7 @@
   position: absolute;
   top:2px;
   margin-left:10px;
-  background-color:red;
+  background-color:yellowgreen;
   border-radius:50%;
   width: 24px;
 }
